# aleph-monitoring-proxy

./: .gitignore  README.md  deploy.py  pyproject.toml
.github/workflows/: test.yml
src/monitoring_proxy/: main.py  metrics.py  scoring.py
src/monitoring_proxy/templates/: index.html
tests/: test_metrics.py  test_routes.py  test_scoring.py
